@@ -1,6 +1,14 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-02-11 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Tweak syslog integration
+    * Allow SSL files for cloudi_service_http_cowboy to be configured with
+      environment variables that are expanded
+      (separate SSL files can not yet be specified until Erlang/OTP changes
+       (http://erlang.org/pipermail/erlang-questions/2013-October/075814.html))
+
 2014-02-05 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Add syslog logging support
